--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "version": "0.1.0",
   "author": "Aaron Endsley <aaronendsley@gmail.com>",
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
-    "gatsby": "^2.24.80",
+    "gatsby": "^2.24.84",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.35",
-    "gatsby-plugin-offline": "^3.2.33",
+    "gatsby-plugin-offline": "^3.2.36",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.42",
+    "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-source-sanity": "^6.0.4",
-    "gatsby-transformer-sharp": "^2.5.18",
+    "gatsby-transformer-sharp": "^2.5.19",
+    "isomorphic-fetch": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -30,14 +32,14 @@
     "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.13.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-config-wesbos": "^1.0.1",
     "eslint-plugin-html": "^6.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.1.2"
   },
   "keywords": [
